deploy/cluster/monitoring/grafana/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
  type: ClusterIP
  ports:
  - name: http-grafana
    port: 3000
    targetPort: 3000
