deploy/cluster/monitoring/grafana/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboards
  namespace: monitoring
spec:
  hosts:
  - "dashboards.s42.app"
  gateways:
  - s42-monitoring
  http:
  - route:
    - destination:
        port:
          number: 3000
        host: grafana.monitoring.svc.cluster.local
